--- a/components/unas-clock.html
+++ b/components/unas-clock.html
@@ -30,69 +30,69 @@
             seconds=this.shadowRoot.getElementById('seconds'),
             period=this.shadowRoot.getElementById('period');
 
-        
+         console.log(h + ':' + m + ':' + s);
 
         if(this.timezone != undefined){
           switch(this.timezone){
             case 'Pacific/Midway' :
             case 'Pacific/Samoa' :
-              h = today.getHours(today.setHours(today.getHours() - 11));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 11));
             break;
             case 'Pacific/Honolulu' :
-              h = today.getHours(today.setHours(today.getHours() - 10));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 10));
             break;
             case 'US/Alaska' :
-              h = today.getHours(today.setHours(today.getHours() - 9));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 9));
             break;
             case 'America/Los_Angeles' :
             case 'America/Tijuana' :
-              h = today.getHours(today.setHours(today.getHours() - 8));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 8));
             break;
             case 'US/Arizona' :
             case 'America/Chihuahua' :
             case 'America/Chihuahua' :
             case 'America/Mazatlan' :
             case 'US/Mountain' :  
-              h = today.getHours(today.setHours(today.getHours() - 7));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 7));
             break;
             case 'America/Managua' :
             case 'US/Central' :
             case 'America/Mexico_City' :
             case 'America/Monterrey' :
             case 'Canada/Saskatchewan' :
-              h = today.getHours(today.setHours(today.getHours() - 6));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 6));
             break;
             case 'America/Bogota' :
             case 'US/Eastern' :
             case 'US/East-Indiana' :
             case 'America/Lima' :
             case 'America/Bogota' :
-              h = today.getHours(today.setHours(today.getHours() - 5));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 5));
             break;
             case 'America/Caracas' :
-              h = today.getHours(today.setHours(today.getHours() - 4));
-              m = today.getMinutes(today.setMinutes(today.getMinutes() - 30));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 4));
+              m = today.getUTCMinutes(today.setMinutes(today.getUTCMinutes() - 30));
             break;
             case 'America/La_Paz' :
             case 'Canada/Atlantic' :
             case 'America/Santiago' :
-              h = today.getHours(today.setHours(today.getHours() - 4));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 4));
             break;
             case 'Canada/Newfoundland' :
-              h = today.getHours(today.setHours(today.getHours() - 3));
-              m = today.getMinutes(today.setMinutes(today.getMinutes() - 30));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 3));
+              m = today.getUTCMinutes(today.setMinutes(today.getUTCMinutes() - 30));
             break;
             case 'America/Sao_Paulo' :
             case 'America/Argentina/Buenos_Aires' :
             case 'America/Godthab' :
-              h = today.getHours(today.setHours(today.getHours() - 3));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 3));
             break;
             case 'America/Noronha' :
-              h = today.getHours(today.setHours(today.getHours() - 2));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 2));
             break;
             case 'Atlantic/Azores' :
             case 'Atlantic/Cape_Verde' :
-              h = today.getHours(today.setHours(today.getHours() - 1));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() - 1));
             break;
             case 'Africa/Casablanca' :
             case 'Europe/London' :
@@ -101,7 +101,7 @@
             case 'Europe/London' :
             case 'Africa/Monrovia' :
             case 'UTC' :
-              h = today.getHours(today.setHours(today.getHours() + 0));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 0));
             break;
             case 'Europe/Amsterdam' :
             case 'Europe/Belgrade' :
@@ -122,7 +122,7 @@
             case 'Europe/Warsaw' :
             case 'Africa/Lagos' :
             case 'Europe/Zagreb' :
-              h = today.getHours(today.setHours(today.getHours() + 1));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 1));
             break;
             case 'Europe/Athens' :
             case 'Europe/Bucharest' :
@@ -136,7 +136,7 @@
             case 'Europe/Sofia' :
             case 'Europe/Tallinn' :
             case 'Europe/Vilnius' :
-              h = today.getHours(today.setHours(today.getHours() + 2));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 2));
             break;
             case 'Asia/Baghdad' :
             case 'Asia/Kuwait' :
@@ -144,49 +144,49 @@
             case 'Africa/Nairobi' :
             case 'Asia/Riyadh' :
             case 'Europe/Volgograd' :
-              h = today.getHours(today.setHours(today.getHours() + 3));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 3));
             break;
             case 'Asia/Tehran' :
               h = today.getHours(today.setHours(today.getHours() + 3));
-              m = today.getMinutes(today.setMinutes(today.getMinutes() + 30));
+              m = today.getUTCMinutes(today.setMinutes(today.getUTCMinutes() + 30));
             break;
             case 'Asia/Muscat' :
             case 'Asia/Baku' :
             case 'Europe/Moscow' :
             case 'Asia/Tbilisi' :
             case 'Asia/Yerevan' :
-              h = today.getHours(today.setHours(today.getHours() + 4));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 4));
             break;
             case 'Asia/Kabul' :
-              h = today.getHours(today.setHours(today.getHours() + 4));
-              m = today.getMinutes(today.setMinutes(today.getMinutes() + 30));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 4));
+              m = today.getUTCMinutes(today.setMinutes(today.getUTCMinutes() + 30));
             break;
             case 'Asia/Karachi' :
             case 'Asia/Tashkent' :
-              h = today.getHours(today.setHours(today.getHours() + 5));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 5));
             break;
             case 'Asia/Calcutta' :
             case 'Asia/Kolkata' :
-              h = today.getHours(today.setHours(today.getHours() + 5));
-              m = today.getMinutes(today.setMinutes(today.getMinutes() + 30));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 5));
+              m = today.getUTCMinutes(today.setMinutes(today.getUTCMinutes() + 30));
             break;
             case 'Asia/Katmandu' :
-              h = today.getHours(today.setHours(today.getHours() + 5));
-              m = today.getMinutes(today.setMinutes(today.getMinutes() + 45));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 5));
+              m = today.getUTCMinutes(today.setMinutes(today.getUTCMinutes() + 45));
             break;
             case 'Asia/Almaty' :
             case 'Asia/Dhaka' :
             case 'Asia/Yekaterinburg' :
-              h = today.getHours(today.setHours(today.getHours() + 6));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 6));
             break;
             case 'Asia/Rangoon' :
-              h = today.getHours(today.setHours(today.getHours() + 6));
-              m = today.getMinutes(today.setMinutes(today.getMinutes() + 30));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 6));
+              m = today.getUTCMinutes(today.setMinutes(today.getUTCMinutes() + 30));
             break;
             case 'Asia/Bangkok' :
             case 'Asia/Jakarta' :
             case 'Asia/Novosibirsk' :
-              h = today.getHours(today.setHours(today.getHours() + 7));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 7));
             break;
             case 'Asia/Hong_Kong' :
             case 'Asia/Chongqing' :
@@ -198,16 +198,16 @@
             case 'Asia/Ulan_Bator' :
             case 'Asia/Urumqi' :
             case 'Asia/Irkutsk' :
-              h = today.getHours(today.setHours(today.getHours() + 8));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 8));
             break;            
             case 'Asia/Seoul' :
             case 'Asia/Tokyo' :
-              h = today.getHours(today.setHours(today.getHours() + 9));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 9));
             break;
             case 'Australia/Adelaide' :
             case 'Australia/Darwin' :
-              h = today.getHours(today.setHours(today.getHours() + 9));
-              m = today.getMinutes(today.setMinutes(today.getMinutes() + 30));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 9));
+              m = today.getUTCMinutes(today.setMinutes(today.getUTCMinutes() + 30));
             break;
             case 'Australia/Brisbane' :
             case 'Australia/Canberra' :
@@ -217,22 +217,22 @@
             case 'Pacific/Port_Moresby' :
             case 'Australia/Sydney' :
             case 'Asia/Yakutsk' :
-              h = today.getHours(today.setHours(today.getHours() + 10));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 10));
             break;
             case 'Asia/Vladivostok' :
-              h = today.getHours(today.setHours(today.getHours() + 11));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 11));
             break;
             case 'Pacific/Auckland' :
             case 'Pacific/Fiji' :
             case 'Pacific/Kwajalein' :
             case 'Asia/Kamchatka' :
             case 'Asia/Magadan' :
-              h = today.getHours(today.setHours(today.getHours() + 12));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 12));
             break;
             case 'Pacific/Tongatapu' :
-              h = today.getHours(today.setHours(today.getHours() + 13));
+              h = today.getUTCHours(today.setHours(today.getUTCHours() + 13));
             break;
-            default : h = today.getHours(today.setHours(today.getHours() + 0));
+            default : h = today.getUTCHours(today.setHours(today.getUTCHours() + 0));
           }          
         }else{
           h = h;
